changed html second time.

--- a/Blog/templates/Blog/post_list.html
+++ b/Blog/templates/Blog/post_list.html
@@ -10,13 +10,13 @@
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My first post</a></h2>
-            <p>Somthing something!!!</p>
+            <p>sahduiasdkass hddulhdjs .jhdhd oohddh jdihd</p>
         </div>
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p>Again Somthing something!!!!</p>
+            <p>Aenean ihh 89 lkj0wkljaf nos kli flkf</p>
         </div>
     </body>
 </html>
