--- a/Blog/templates/Blog/post_list.html
+++ b/Blog/templates/Blog/post_list.html
@@ -6,17 +6,12 @@
         <div>
             <h1><a href="/">Tech4</a></h1>
         </div>
-
+        {% for post in posts %}
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>sahduiasdkass hddulhdjs .jhdhd oohddh jdihd</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>published: {{ post.published_date }}</p>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean ihh 89 lkj0wkljaf nos kli flkf</p>
-        </div>
+        {% endfor %}
     </body>
 </html>
