--- a/Blog/templates/Blog/post_list.html
+++ b/Blog/templates/Blog/post_list.html
@@ -1,17 +1,13 @@
-<html>
-    <head>
-        <title>Tech4</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Tech4</a></h1>
-        </div>
-        {% for post in posts %}
-        <div>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>published: {{ post.published_date }}</p>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'Blog/base.html'%}
+
+{% block content %}
+            {% for post in posts %}
+                <div class="post">
+                    <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                    <div class="date">
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+{% endblock %}
